Finish first portfolio

--- a/index.html
+++ b/index.html
@@ -11,15 +11,48 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To </h1>
-    <h1> <span class="name-highlight">Jhankar</span> Website</h1>
+    <h1> <span class="orange-highlight">Jhankar</span> Website</h1>
     <h3>World-class profesional Web Developer</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima a inventore tempore. Suscipit recusandae doloribus esse fugiat iure maxime, facilis earum est tempora iusto non unde vitae quos sapiente reiciendis, dicta dolore. Iusto, sint! Incidunt recusandae voluptate laborum reprehenderit porro repellat dolore quisquam blanditiis, maiores illo voluptas, optio impedit non unde magni deserunt odio velit, aliquam sunt eligendi sint commodi temporibus! Tenetur iusto nihil ipsum tempora adipisci? Ea atque, possimus voluptatum sint doloribus veniam. Omnis eveniet repellat sequi error voluptatibus. Explicabo cupiditate nesciunt ipsum maiores? Dolorum laudantium rem, esse quisquam iste officiis, assumenda perferendis, harum dolorem earum ipsam expedita labore.</p>
+
+    <a class="link-button" target="_blank" href="google.com">Google</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="top-banner">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            
+    <h3>Dream Big</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima a inventore tempore. Suscipit recusandae doloribus esse fugiat iure maxime, facilis earum est tempora iusto non unde vitae quos sapiente reiciendis, dicta dolore. Iusto, sint! Incidunt recusandae voluptate laborum reprehenderit porro repellat dolore quisquam blanditiis, maiores illo voluptas, optio impedit non unde magni deserunt odio velit, aliquam sunt eligendi sint commodi temporibus! Tenetur iusto nihil ipsum tempora adipisci? Ea atque, possimus voluptatum sint doloribus veniam. Omnis eveniet repellat sequi error voluptatibus. Explicabo cupiditate nesciunt ipsum maiores? Dolorum laudantium rem, esse quisquam iste officiis, assumenda perferendis, harum dolorem earum ipsam expedita labore.</p>
+
+    <a class="link-button" target="_blank" href="youtube.com">YouTube</a>
+        </div>
+        
+    </section>
+
+    <section class="top-banner">
+        <h3>Experiences</h3>
+        <div class="half-width experiences">
+            <h2>Full Atack web Developer</h2>
+
+            <h6 class="orange-highlight">2021-Present, pro level Developer</h6>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti excepturi aperiam explicabo laudantium. Accusamus blanditiis illum omnis aut dolore? Similique nulla harum excepturi beatae omnis quas temporibus, aliquam sed eligendi.</p>
+
+        </div>
+        <div class="half-width experiences">
+            <h2 >Full Atack web Developer</h2>
+
+            <h6 class="orange-highlight">2021-Present, pro level Developer</h6>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti excepturi aperiam explicabo laudantium. Accusamus blanditiis illum omnis aut dolore? Similique nulla harum excepturi beatae omnis quas temporibus, aliquam sed eligendi.</p>
+
         </div>
     </section>
 </body>
